--- a/doc/release-notes/release-7.sgml.in
+++ b/doc/release-notes/release-7.sgml.in
@@ -33,6 +33,7 @@ The Squid-@SQUID_RELEASE@ change history can be <url url="https://github.com/squ
 	<item>Cache Manager changes
 	<item>Removed purge tool
 	<item>Remove deprecated languages
+	<item>Remove Ident protocol support
 </itemize>
 
 <p>Most user-facing changes are reflected in squid.conf (see further below).
@@ -103,6 +104,24 @@ The Squid-@SQUID_RELEASE@ change history can be <url url="https://github.com/squ
 <p>See <url url="https://en.wikipedia.org/wiki/List_of_ISO_639_language_codes"> for
    the full ISO-639 list. HTTP uses the 2-letter (set 1) codes.
 
+<sect1>Removed Ident protocol support
+
+<p>Ident protocol (RFC 931 obsoleted by RFC 1413) has been considered
+seriously insecure and broken since at least 2009 when SANS issued an update
+recommending its removal from all networks. Squid Ident implementation had its
+own set of problems (that could not be addressed without significant code
+refactoring).
+
+<p>Configurations using ident/ident_regex ACLs, %ui logformat codes, %IDENT
+external_acl_type format code, or ident_lookup_access/ident_timeout directives
+are now rejected, leading to fatal startup failures.
+
+<p>To avoid inconveniencing admins that do <em>not</em> use Ident features,
+access logs with "common" and "combined" logformats now always receive a dash
+in the position of what used to be a %ui record field.
+
+<p>If necessary, an external ACL helper can be written to perform Ident transactions
+and deliver the user identity to Squid through the **user=** annotation.
 
 <sect>Changes to squid.conf since Squid-@SQUID_RELEASE_OLD@
 <p>
@@ -143,6 +162,8 @@ This section gives an account of those changes in three categories:
 	   necessary.
 	<p>Changed <em>http_status</em> to detect and handle overlapping
 	   status and status-range values. Merging where necessary.
+	<p>Removed <em>ident</em> with Ident protocol support.
+	<p>Removed <em>ident_regex</em> with Ident protocol support.
 
 	<tag>buffered_logs</tag>
 	<p>Honor the <em>off</em> setting in 'udp' access_log module.
@@ -150,6 +171,17 @@ This section gives an account of those changes in three categories:
 	<tag>cachemgr_passwd</tag>
 	<p>Removed the <em>non_peers</em> action. See the Cache Manager
 	<ref id="mgr" name="section"> for details.
+
+	<tag>access_log</tag>
+	<p>Built-in <em>common</em> and <em>combined</em> logformats now always
+	receive a dash character ("-") in the position of what used to be a
+	<em>%ui</em> record field.
+
+	<tag>logformat</tag>
+	<p>Removed <em>%ui</em> format code with Ident protocol support.
+
+	<tag>external_acl_type</tag>
+	<p>Removed <em>%IDENT</em> format code with Ident protocol support.
 
 </descrip>
 
@@ -171,6 +203,12 @@ This section gives an account of those changes in three categories:
 	<tag>mcast_miss_encode_key</tag>
 	<p>The corresponding code has not built for many years, indicating that the
 	feature is unused.
+
+	<tag>ident_lookup_access</tag>
+	<p>Ident protocol is no longer supported natively.
+
+	<tag>ident_timeout</tag>
+	<p>Ident protocol is no longer supported natively.
 
 </descrip>
 
@@ -231,6 +269,9 @@ This section gives an account of those changes in three categories:
 	<tag>CPPFLAGS=-DMULTICAST_MISS_STREAM</tag>
 	<p>The code enabled by this preprocessor macro has not built for many
 	   years, indicating that the feature is unused.
+
+	<tag>--disable-ident-lookups</tag>
+	<p>The option was dropped during Ident protocol support removal.
 
 </descrip>
 
