--- a/doc/release-notes/release-7.sgml.in
+++ b/doc/release-notes/release-7.sgml.in
@@ -166,8 +166,8 @@ This section gives an account of those changes in three categories:
 	<p>Removed <em>ident_regex</em> with Ident protocol support.
 
 	<tag>auth_param</tag>
-	<p>Changed <em>basic</em> scheme <em>credentialsttl</em> option
-	   to prefer helper provided <em>ttl=N</em> value (if any).
+	<p>Ignore <em>basic</em> scheme <em>credentialsttl</em> option
+	   if helper has returned <em>ttl=N</em>.
 
 	<tag>buffered_logs</tag>
 	<p>Honor the <em>off</em> setting in 'udp' access_log module.
