Add a weak test of SMP configuration macro expansion
Better than nothing. We could add a stronger test that validates
equality, but it would make this configuration file inapplicable to SMP
Squids. IMO, we should not do that without also developing the
corresponding instruction (and adding that to the instructions file).

--- a/test-suite/squidconf/pp-ifs.conf
+++ b/test-suite/squidconf/pp-ifs.conf
@@ -7,15 +7,18 @@
 
 if true
     if 10 = 0xA
-        if 00=000
-            if  -00= +00
-            # if -1=+1
-                if false
-                    unreachable_directive
-                else
-                    if preprocessor rejects this particular malformed line, then the test passes
+        if 0${process_number} = 077777777
+        else
+            if 00=000
+                if  -00= +00
+                # if -1=+1
+                    if false
+                        unreachable_directive
+                    else
+                        if preprocessor rejects this particular malformed line, then the test passes
+                    endif
+                # endif
                 endif
-            # endif
             endif
         endif
     else
