fixup: Make open/closeKidSection(...,false) calls more readable
This change prompted upgrading isYaml boolean to Mgr::Format. It felt
silly to first convert Format to boolean (when registering Action
profiles) and then convert that boolean back into Format (when calling
open/closeKidSection() from generic Action code).

This upgrade will also help if we ever add a third reporting format or
convert all actions to YAML.

--- a/src/mgr/Makefile.am
+++ b/src/mgr/Makefile.am
@@ -13,6 +13,7 @@ libmgr_la_SOURCES = \
 	Action.cc \
 	Action.h \
 	ActionCreator.h \
+	ActionFeatures.h \
 	ActionParams.cc \
 	ActionParams.h \
 	ActionPasswordList.cc \
