move from std::string to SBuf

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,7 +16,9 @@ LOADABLE_MODULES_SOURCES = \
 	LoadableModules.cc \
 	LoadableModules.h
 
-SUBDIRS = mem time debug base anyp helper dns html ftp parser comm error eui acl format clients sbuf servers fs repl store DiskIO proxyp
+# order is important. If anything in a subdir requires a convenience library
+# from another subdir, then it must appear later in this list
+SUBDIRS = mem time debug base anyp helper dns html ftp parser comm error eui sbuf acl format clients servers fs repl store DiskIO proxyp
 
 if ENABLE_AUTH
 SUBDIRS += auth
