fixup: Removed distracting workarounds for int64() zero-parsing bugs

--- a/test-suite/squidconf/pp-ifs.conf
+++ b/test-suite/squidconf/pp-ifs.conf
@@ -7,10 +7,10 @@
 
 if true
     if 10 = 0xA
-        if 0${process_number} = 077777777
+        if ${process_number} = 9223372036854775807
         else
-            if 00=000
-                if  -00= +00
+            if 0=000
+                if  -0= +0
                 # if -1=+1
                     if false
                         unreachable_directive
