fixup: Fixed (or at least improved) test case wording

--- a/test-suite/squidconf/pp-ifs.conf
+++ b/test-suite/squidconf/pp-ifs.conf
@@ -22,6 +22,6 @@ if true
             endif
         endif
     else
-        if this unreachable statement reached then preprocessor failed
+        if this unreachable statement was reached then preprocessor failed
     endif
 endif
