--- a/doc/release-notes/release-7.sgml.in
+++ b/doc/release-notes/release-7.sgml.in
@@ -279,7 +279,7 @@ This section gives an account of those changes in three categories:
 <p>
 <descrip>
 	<tag>Adjusted configuration and format of ext_time_quota_acl helper debugging</tag>
-	<p>The <em>-l</em> option that enables ext_time_quota_acl to log debug messages
+	<p>The <em>-l</em> option that enables <em>ext_time_quota_acl</em> to log debug messages
 		to a custom logfile has been removed, and their format has been
 		changed to be in line with Squid's cache.log format.
 </descrip>
