--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -22,72 +22,72 @@ env:
 
 jobs:
 
-  # functionality-tests:
+  functionality-tests:
 
-  #   runs-on: ubuntu-22.04
+    runs-on: ubuntu-22.04
 
-  #   steps:
-  #     - name: Install prerequisite packages
-  #       run: |
-  #         sudo apt-get --quiet=2 update
-  #         sudo apt-get --quiet=2 install libtool-bin
+    steps:
+      - name: Install prerequisite packages
+        run: |
+          sudo apt-get --quiet=2 update
+          sudo apt-get --quiet=2 install libtool-bin
 
-  #     - name: Setup a nodejs environment
-  #       uses: actions/setup-node@v4
-  #       with:
-  #         node-version: 20
+      - name: Setup a nodejs environment
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
 
-  #     - name: Checkout Squid sources
-  #       uses: actions/checkout@v4
-  #       with:
-  #         fetch-depth: ${{ env.CHECKOUT_FETCH_DEPTH }}
+      - name: Checkout Squid sources
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: ${{ env.CHECKOUT_FETCH_DEPTH }}
 
-  #     - run: ./bootstrap.sh
-  #     - run: ./configure --with-openssl
-  #     - run: make -j`nproc`
-  #     - run: |
-  #         sudo make install
-  #         sudo chown -R nobody:nogroup /usr/local/squid
+      - run: ./bootstrap.sh
+      - run: ./configure --with-openssl
+      - run: make -j`nproc`
+      - run: |
+          sudo make install
+          sudo chown -R nobody:nogroup /usr/local/squid
 
-  #     - run: ./test-suite/test-functionality.sh
+      - run: ./test-suite/test-functionality.sh
 
-  #     # Squid logs are not readable to actions/upload-artifact below
-  #     - name: Prep test logs
-  #       if: success() || failure()
-  #       run: sudo chmod -R a+rX /usr/local/squid
+      # Squid logs are not readable to actions/upload-artifact below
+      - name: Prep test logs
+        if: success() || failure()
+        run: sudo chmod -R a+rX /usr/local/squid
 
-  #     - name: Publish test logs
-  #       if: success() || failure()
-  #       uses: actions/upload-artifact@v4
-  #       with:
-  #         name: test-logs
-  #         path: |
-  #           ${{ runner.temp }}/*.log
-  #           /usr/local/squid/var/logs/overlord/*.log
+      - name: Publish test logs
+        if: success() || failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-logs
+          path: |
+            ${{ runner.temp }}/*.log
+            /usr/local/squid/var/logs/overlord/*.log
 
-  # source-maintenance-tests:
+  source-maintenance-tests:
 
-  #   runs-on: ubuntu-22.04
+    runs-on: ubuntu-22.04
 
-  #   steps:
-  #     - name: Install prerequisite packages
-  #       run: |
-  #         sudo apt-get --quiet=2 update
-  #         sudo apt-get --quiet=2 install astyle
-  #         sudo apt-get --quiet=2 install gperf
-  #         pip install \
-  #             --user \
-  #             --no-cache-dir \
-  #             --disable-pip-version-check \
-  #             --quiet \
-  #             --progress-bar off \
-  #             codespell==1.16 # TODO: Upgrade to codespell v2
+    steps:
+      - name: Install prerequisite packages
+        run: |
+          sudo apt-get --quiet=2 update
+          sudo apt-get --quiet=2 install astyle
+          sudo apt-get --quiet=2 install gperf
+          pip install \
+              --user \
+              --no-cache-dir \
+              --disable-pip-version-check \
+              --quiet \
+              --progress-bar off \
+              codespell==1.16 # TODO: Upgrade to codespell v2
 
-  #     - uses: actions/checkout@v4
-  #       with:
-  #         fetch-depth: ${{ env.CHECKOUT_FETCH_DEPTH }}
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: ${{ env.CHECKOUT_FETCH_DEPTH }}
 
-  #     - run: ./test-suite/test-sources.sh
+      - run: ./test-suite/test-sources.sh
 
   build-tests:
 
@@ -95,15 +95,15 @@ jobs:
       fail-fast: true
       matrix:
         os:
-          # - ubuntu-22.04
+          - ubuntu-22.04
           - macos-14
         compiler:
           - { CC: gcc, CXX: g++ }
           - { CC: clang, CXX: clang++ }
         layer:
           - { name: layer-00-default, nick: default }
-          # - { name: layer-01-minimal, nick: minimal }
-          # - { name: layer-02-maximus, nick: maximus }
+          - { name: layer-01-minimal, nick: minimal }
+          - { name: layer-02-maximus, nick: maximus }
         exclude:
           # Non-clang testing on MacOS is too much work for very little gain
           - { os: macos-14, compiler: { CC: gcc, CXX: g++ } }
@@ -161,9 +161,10 @@ jobs:
           export CFLAGS="-Wno-compound-token-split-by-macro${CFLAGS:+ $CFLAGS}" # needed fir ltdl with Xcode
 
           # libtool package referenced below fails to copy its configure*
-          # files. We do not know whether that is a brewing bug, but the
-          # following sed command restores installed libtoolize code to its
-          # earlier(and working) variation.
+          # files, possibly due to a packaging/brewing bug. The following sed
+          # command restores installed libtoolize code to its earlier (and
+          # working) variation.
+          echo "brew libtool package details:"
           brew info libtool --json | grep -E 'rebuild|tap_git_head'
           # This hack was tested on libtoolize package with the following output:
           # "rebuild": 2,
@@ -180,37 +181,34 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: build-logs-${{ matrix.os }}-${{ matrix.compiler.CC }}-${{ matrix.layer.nick }}
-          path: |
-            btlayer-*.log
-            /opt/homebrew/bin/glibtoolize
-            /opt/homebrew/Cellar/libtool/2.4.7
+          path: btlayer-*.log
 
-  # CodeQL-tests:
+  CodeQL-tests:
 
-  #   runs-on: [ ubuntu-22.04 ]
+    runs-on: [ ubuntu-22.04 ]
 
-  #   permissions:
-  #     security-events: write
+    permissions:
+      security-events: write
 
-  #   steps:
+    steps:
 
-  #     - name: Install Squid prerequisite Linux packages
-  #       if: runner.os == 'Linux'
-  #       run: |
-  #         # required for "apt-get build-dep" to work
-  #         sudo sed --in-place -E 's/# (deb-src.*updates main)/  \1/g' /etc/apt/sources.list
-  #         sudo apt-get --quiet=2 update
-  #         sudo apt-get --quiet=2 build-dep squid
-  #         sudo apt-get --quiet=2 install linuxdoc-tools libtool-bin
+      - name: Install Squid prerequisite Linux packages
+        if: runner.os == 'Linux'
+        run: |
+          # required for "apt-get build-dep" to work
+          sudo sed --in-place -E 's/# (deb-src.*updates main)/  \1/g' /etc/apt/sources.list
+          sudo apt-get --quiet=2 update
+          sudo apt-get --quiet=2 build-dep squid
+          sudo apt-get --quiet=2 install linuxdoc-tools libtool-bin
 
-  #     - name: Checkout repository
-  #       uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-  #     - name: Initialize CodeQL
-  #       uses: github/codeql-action/init@v3
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
 
-  #     - name: Build Squid
-  #       run: ./test-builds.sh ./test-suite/buildtests/layer-02-maximus.opts
+      - name: Build Squid
+        run: ./test-builds.sh ./test-suite/buildtests/layer-02-maximus.opts
 
-  #     - name: Perform CodeQL Analysis
-  #       uses: github/codeql-action/analyze@v3
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
