--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -170,7 +170,7 @@ jobs:
           # "rebuild": 2,
           # "tap_git_head": "5cede8ea3b7b12c7f68215f75a951430b38d945f",
           #
-          editable=/opt/homebrew/Cellar/libtool/2.4.7/bin/glibtoolize
+          editable=$HOMEBREW_CELLAR/libtool/2.4.7/bin/glibtoolize
           sed -i.bak 's@ltdl_ac_aux_dir=""@ltdl_ac_aux_dir="../build-aux"@' $editable || true
           diff -u $editable.bak $editable || true
 
