--- a/src/security/cert_generators/file/Makefile.am
+++ b/src/security/cert_generators/file/Makefile.am
@@ -30,6 +30,7 @@ security_file_certgen_LDADD = \
 	$(top_builddir)/src/error/liberror.la \
 	$(top_builddir)/src/comm/libminimal.la \
 	$(top_builddir)/src/mem/libminimal.la \
+	$(top_builddir)/src/anyp/libanyp.la \
 	$(top_builddir)/src/base/libbase.la \
 	$(top_builddir)/src/time/libtime.la \
 	$(SSLLIB) \
