Maintenance: split SUBDIRS in Makefile.am (#1888)
Single-line multi-entry SUBDIRS often increase management noise.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,7 +17,30 @@ LOADABLE_MODULES_SOURCES = \
 	LoadableModules.h
 
 # subdir Y that requires a file built in subdir X must appear after X
-SUBDIRS = mem time debug base anyp helper dns html ftp parser comm error eui sbuf acl format clients servers fs repl store DiskIO proxyp
+SUBDIRS = \
+	mem \
+	time \
+	debug \
+	base \
+	anyp \
+	helper \
+	dns \
+	html \
+	ftp \
+	parser \
+	comm \
+	error \
+	eui \
+	sbuf \
+	acl \
+	format \
+	clients \
+	servers \
+	fs \
+	repl \
+	store \
+	DiskIO \
+	proxyp
 
 if ENABLE_AUTH
 SUBDIRS += auth
@@ -25,7 +48,13 @@ AUTH_LIBS= auth/libauth.la
 AUTH_ACL_LIBS= auth/libacls.la
 endif
 
-SUBDIRS	+= http ip icmp log ipc mgr
+SUBDIRS += \
+	http \
+	ip \
+	icmp \
+	log \
+	ipc \
+	mgr
 
 SSL_LIBS=
 if ENABLE_SSL
