more portable test

--- a/configure.ac
+++ b/configure.ac
@@ -117,7 +117,7 @@ dnl Libtool 2.2.6 requires: rm -f
 RM="$RM -f"
 
 PKG_PROG_PKG_CONFIG
-AS_IF([test -z "$PKG_CONFIG"],[
+AS_IF([test "x$PKG_CONFIG" = "x"],[
   AC_MSG_ERROR([pkg-config is required to compile Squid. Please install and then re-run configure ])
 ])
 
