fixup: Polish warning text
Do not warn about "make check" failing twice.
We already have code dedicated to that warning.

Do not try to predict whether Squid will build
(the admin will observe that outcome anyway).
Focus on the missing features instead.

--- a/configure.ac
+++ b/configure.ac
@@ -118,7 +118,7 @@ RM="$RM -f"
 
 PKG_PROG_PKG_CONFIG
 AS_IF([test "x$PKG_CONFIG" = "x"],[
-  AC_MSG_WARN([pkg-config not found. Squid might still build but miss some features, and 'make check' might fail])
+  AC_MSG_WARN([pkg-config not found. Many optional features with external dependencies will not be enabled by default, usually without further warnings.])
 ])
 
 
