Replace header field-line parser
.. with new Tokenizer based parser.

Update specification references to latest RFCs. There are no
behavioural differences from this.

Also, remove one more SquidString allocate+copy. Although
this is replaced with an SBuf allocate+copy so only bug
fixes, no performance gain expected.

--- a/src/http/one/Makefile.am
+++ b/src/http/one/Makefile.am
@@ -10,6 +10,8 @@ include $(top_srcdir)/src/Common.am
 noinst_LTLIBRARIES = libhttp1.la
 
 libhttp1_la_SOURCES = \
+	FieldParser.cc \
+	FieldParser.h \
 	Parser.cc \
 	Parser.h \
 	RequestParser.cc \
