Apply suggestions from code review
Co-authored-by: Amos Jeffries <yadij@users.noreply.github.com>

--- a/doc/release-notes/release-6.sgml.in
+++ b/doc/release-notes/release-6.sgml.in
@@ -282,10 +282,10 @@ This section gives an account of those changes in three categories:
 <sect1>Other changes<label id="otherchanges">
 <p>
 <descrip>
-	<tag>Adjusted configuration and format of ext_time_quota_acl helper debugging</tag>
+	<tag>Adjusted configuration and format of <em>ext_time_quota_acl</em> helper debugging</tag>
 	<p>The <em>-l</em> option that enables <em>ext_time_quota_acl</em> to log debug messages
 		to a custom logfile has been removed, and their format has been
-		changed to be in line with Squid's cache.log format.
+		changed to be in line with Squid <em>cache.log</em> format.
 </descrip>
 
 <sect>Changes to ./configure options since Squid-@SQUID_RELEASE_OLD@
