--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -215,7 +215,7 @@ jobs:
             export ltver=2.4.2
             export CFLAGS='-Wno-compound-token-split-by-macro'
             export LDFLAGS="-L/usr/local/lib"
-\            export PATH="$HOME/bin:$PATH"
+            export PATH="$HOME/bin:$PATH"
             ./test-builds.sh --verbose
 
       - name: Publish build logs
