--- a/.github/workflows/staged.yaml
+++ b/.github/workflows/staged.yaml
@@ -49,7 +49,7 @@ jobs:
       - name: Run build test
         id: test
         run: |
-          ./test-builds.sh --verbose --use-config-cache ${{ matrix.layer.name }}
+          ./test-builds.sh ${{ matrix.layer.name }}
 
       - name: Publish build logs
         if: success() || failure()
@@ -104,7 +104,7 @@ jobs:
           sed -i.bak 's@ltdl_ac_aux_dir=""@ltdl_ac_aux_dir="../build-aux"@' $editable || true
           diff -u $editable.bak $editable || true
 
-          ./test-builds.sh --verbose --use-config-cache
+          ./test-builds.sh
 
       - name: Publish build logs
         if: success() || failure()
