rename checks and add documentation

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -1,4 +1,10 @@
-name: PR commit checks and PR target branch commit checks
+name: PR commit
+# These are fast-react checks that are executed
+# whenever a PR is created or updated. These
+# are meant to quickly and cheaply identify issues with
+# the code as presented, leaving more expensive
+# multiplatform checks to the "staged commit" phase
+
 
 on:
   push:
