--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -1,19 +1,15 @@
-# Checks defined in this file are meant to be
-# run every time a PR is created, updated, and staged
-# for merge.
-# They aim to and cheaply identify issues with
-# the code as presented, leaving more expensive
-# multiplatform checks to the "staged commit" phase.
+# The jobs below are executed on every PR branch push (among other
+# events), quickly and cheaply detecting many common PR problems.
 #
-# Be mindful about keeping at all times Anubis' configuration
-# in sync with the total number of tests targeting
-# the "auto" branch, regardless of the file defining them
+# Anubis configuration must be kept in sync with the total number of
+# tests executed for "auto" branch commits, including tests in other
+# GitHub workflow file(s).
 
 name: PR commit
 
 on:
   push:
-    # test commits on this branch, and staged commits
+    # test commits on this branch and staged commits
     branches: [ "master", "auto" ]
 
   pull_request:
